[#166879558] Fix label line height so that it doesn't move up when the text is wrapped

--- a/components/consumer/desktop/claim-toggle-content/style.scss
+++ b/components/consumer/desktop/claim-toggle-content/style.scss
@@ -21,6 +21,10 @@
       .pbg-label {
         @extend .pbg-desktop-heading-3;
 
+        span {
+          line-height: unset;
+        }
+
         &.pbg-label-error {
           color: $red-60;
         }
